--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-bootstrap": "^1.3.0",
     "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
-    "react-highlight-words": "^0.16.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
@@ -21,7 +20,18 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "no-console": [
+        "error",
+        {
+          "allow": [
+            "warn",
+            "error"
+          ]
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
