--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "react-bootstrap": "^1.3.0",
     "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "sagas": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
