--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,7 @@ services:
       context: .
     volumes:
       - /app/node_modules
-      - ./cdm-recommender-system:/app
+      - .:/app
+    stdin_open: true
+    environment:
+      - REACT_APP_DOCKER_COMPOSE=true
