CDM-RS: add --watchAll=false to npm test -- -- coverage, so that it returns back to travis-ci command-line

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - docker build -t phorvicheka/cdm-recommender-system-reactjs-test -f Dockerfile.dev .
 
 script:
-  - docker run phorvicheka/cdm-recommender-system-reactjs-test npm test -- --coverage
+  - docker run phorvicheka/cdm-recommender-system-reactjs-test npm test -- --coverage --watchAll=false
 
 after_success:
   # Output something every 10 minutes or Travis kills the job
