CDM-RS: CRA custom output name based on package name and version when building
Steps:
- yarn add react-app-rewired -D
- yarn add @babel/runtime
- add config-overrides.js

Refs:
https://github.com/timarney/react-app-rewired

https://webpack.js.org/configuration/entry-context/#naming

Multiple entries rewire error: Cannot read property 'filter' of undefined
https://github.com/timarney/react-app-rewired/issues/421
https://github.com/vl4d1m1r4/cra-multi-entry/blob/8c62e9168e638e4c841fff87291cec6a99eb4ea9/config-overrides.js

Disabling code splitting in CRA2
https://github.com/facebook/create-react-app/issues/5306

Setting up a template with React-App-Rewired
https://dev.to/aryclenio/part-3-setting-up-a-template-with-react-app-rewired-3e9j

Custom output name based on package name and version when building
https://github.com/timarney/react-app-rewired/issues/301

How do I build js and css without random number?
https://github.com/facebook/create-react-app/issues/1005

A way to defined the bundle filename?
https://github.com/facebook/create-react-app/issues/4156

https://medium.com/@ryoldash/customize-webpack-config-of-react-app-created-with-create-react-app-7a78c7849edc
https://medium.com/webpack/webpack-4-code-splitting-chunk-graph-and-the-splitchunks-optimization-be739a861366

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -18,9 +19,9 @@
     "sagas": "^0.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "docs": "jsdoc -c ./jsdoc.json"
   },
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "better-docs": "^2.3.2",
-    "jsdoc": "^3.6.6"
+    "jsdoc": "^3.6.6",
+    "react-app-rewired": "^2.1.6"
   }
 }
