--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.3.0",
     "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
