--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
-    "sagas": "^0.0.1"
+    "sagas": "^0.0.1",
+    "core-js": "^2.5.6",
+    "immutable": "^3.8.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
