--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "core-js": "^2.5.6",
+    "immutable": "^3.8.2",
+    "mdbreact": "^4.27.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
     "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
+    "react-js-pagination": "^3.0.3",
     "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
-    "sagas": "^0.0.1",
-    "core-js": "^2.5.6",
-    "immutable": "^3.8.2"
+    "sagas": "^0.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
