--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "core-js": "^2.5.6",
+    "formik": "^2.2.1",
     "immutable": "^3.8.2",
     "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
